--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,488 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: poppins, Arial;
+  font-size: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app{
+  background-color: #f4f5fe;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+}
+
+main{
+  overflow-y: scroll;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+
+.sidebar{
+  height: 100%;
+  background: #fff;
+  color: #000;
+  padding: 10px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  justify-content: space-between;
+}
+
+.logo{
+  font-size: 1.5rem;
+  width: 100%;
+  text-align: center;
+}
+
+.logo > span{
+  font-size: 1.5rem;
+  color: #f9bb57;
+}
+
+.nav--links{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.nav-btns{
+  display: flex;
+  flex-direction: column;
+  padding: 0px 10px;
+  gap: 0.5rem;
+  margin-bottom: 5px;
+}
+
+.nav-btns > button {
+  text-align: left;
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  border: none;
+  outline: none;
+  background-color: #fff;
+  color: #4f4f4f;
+  font-size: 0.8rem;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.nav-btns > button:hover{
+  background-color: #000;
+  color: #fff;
+}
+
+.nav--group > span{
+  font-size: 0.8rem;
+  padding: 0 10px;
+  color: #c7c7ca;
+}
+
+.logoout-icon{
+  font-size: 1.4rem;
+  font-weight: 900;
+}
+
+.account-info > div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  overflow: hidden;
+  padding: 10px;
+  border-top: 2px solid #ddd;
+}
+
+.account-info{
+  min-width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.account-info > a{
+  font-size: 10px;
+  height: 50px;
+  background-color: #f9bb57;
+  color: #000;
+  font-weight: 500;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem;
+  gap: 4px;
+  justify-content: center;
+  width: 100%;
+}
+
+.account-info > div > img{
+  border-radius: 50%;
+}
+
+.account-info > div > span{
+  font-size: 0.8rem;  
+}
+
+.shortcuts, .Fav-cards{
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 12px 10px;
+  margin-bottom: 0.4rem;
+}
+
+.shortcut-header, .Fav-header{
+  font-weight: 500;
+  font-family: poppins;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.shortcut-card{
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 8px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.7rem;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+}
+
+.artist-card{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.artist-info{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.artist-info > img{
+  border-radius: 50%;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+}
+
+.side-section{
+  max-width: 300px;
+  align-self: flex-end;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.Fav-cards{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.artist--details, .music--details{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.artist--details > h1, .music--details > h1{
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+
+.artist--details > span, .music--details > span{
+  font-size: 0.6rem;
+  color: #4f4f4f;
+}
+
+.music-card{
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  min-height: 240px;
+  border-radius: 10px;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  padding: 8px;
+}
+
+.music-card > img{
+  width: 100%;
+  height: 180px;
+  border-radius: 10px;
+}
+
+.music-page{
+  flex: 1;
+  padding: 10px 20px;
+}
+
+.search{
+  background: #fff;
+  border-radius: 20px;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  margin-bottom: 1.2rem;
+}
+
+.search > form{
+  padding: 5px 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;  
+}
+
+.search > form > input{
+  outline: none;
+  border: none;
+  flex: 1;
+  font-size: 0.9rem;
+}
+
+.Trending > p{
+  font-size: 0.5rem;
+}
+
+.Trending > .title{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.title > span{
+  display: flex;
+  align-items: center;
+}
+
+.title > h1{
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.Trending > .details{
+  border-radius: 10px;
+  overflow: hidden;
+  height: 180px;
+  position: relative;
+}
+
+.Trending > .details > img{
+  position: absolute;
+  z-index: 1;
+}
+
+.trending-info{
+  position: absolute;
+  z-index: 20;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.Trending > .details > .gradient{
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(75deg, rgb(255, 255, 255) 20% ,rgba(255, 255, 255, 0.909) 40% , rgba(255, 255, 255, 0));
+}
+
+.trending-info > .extras > span{
+  color: #5b5b5b;
+  font-size: 0.9rem;
+}
+
+.trending-info > .extras > div > h2{
+  color: hsl(0, 0%, 0%);
+  font-size: 1.5rem;
+  line-height: 25px;
+}
+
+.trending-info > .extras > div{
+  margin-top: 20px;
+}
+
+.trending-info > .extras{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.btns{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.btn{
+  background: #000;
+  color: #fff;
+  padding: 4px 15px;
+  text-transform: capitalize;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.follow{
+  background: transparent;
+  color: #000;
+}
+
+.subs{
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: end;
+  color: #f6f6f6;
+  font-size: 0.8rem;
+}
+
+.listeners{
+  color: #fff;
+  font-size: 1.3rem;
+}
+
+table{
+  width: 100%;
+}
+
+.music-page{
+  display: flex;
+  flex-direction: column;
+}
+
+.search-table{
+  flex: 1;
+  height: 490px;
+  overflow-y: scroll;
+}
+
+.search-table > tbody{
+  height: 450px;
+  overflow-y: scroll;
+}
+
+tbody{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow-y: scroll;
+  height: 210px;
+}
+
+tr{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 10px 30px;
+  transition: 0.5s;
+  border-bottom: 1px solid #626262;
+}
+
+.exception{
+  transition: none;
+  border-radius: 0;
+}
+
+td, th{
+  font-size: 0.8rem;
+  text-align: left;
+  width: 150px;
+}
+
+th{
+  font-weight: 500;
+}
+
+tr:hover{
+  border-radius: 6px;
+  border-bottom: none;
+  box-shadow: 0 0px 10px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  background: #fff;
+  cursor: pointer;
+}
+
+
+.playlist > h1{
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 0.5rem;
+}
+
+.audio-player{
+  background: #fff;
+  padding: 6px 20px;
+  border-radius: 12px;
+  box-shadow: 0 0px 10px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+
+audio{
+  background: #fff;
+  padding: 6px 20px;
+  border-radius: 12px;
+  box-shadow: 0 0px 10px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  width: 100%;
+  margin-top: 10px;
+}
+
+audio::-webkit-media-controls-panel{
+  background-color: #fff;
+  font-size: 1.2em;
+}
+
+.top-icons{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 30px;
+}
+
+.audio-icon{
+  cursor: pointer;
+  font-size: 1.25rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.audio-icon:not(.play):hover{
+  font-size: 1.5rem;
+  color: #f9bb57;
+}
+
+.play:hover{
+  font-size: 2rem;
+  animation: rotate 0.5s linear forwards;
+}
+
+.bar-text{
+  display: flex;
+  padding: 0 20px;
+  justify-content: space-around;
+}
+
+.bar-text input{
+  flex: 1;
+}
+
+.bar-text span{
+  font-size: 0.6rem;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
 }
